--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,10 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate:
+        format-sql: true
   h2:
     console:
       enabled: true
